// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdvvtL kBUuBe sinoui-typography sinoui-typography--overline"
  color="textPrimary"
  type="overline"
>
  Overline
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdvvtL kBUuBe sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </h2>,
  <p
    className="sc-bdvvtL gOjDgi sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL hLMoJz sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL eIlKBW sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdvvtL kBUuBe sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL dFXwQx sinoui-typography sinoui-typography--overline"
    color="primary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL eZGhXK sinoui-typography sinoui-typography--overline"
    color="secondary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL kBUuBe sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL dWwAsr sinoui-typography sinoui-typography--overline"
    color="textSecondary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL ptpEb sinoui-typography sinoui-typography--overline"
    color="error"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL gtpVlS sinoui-typography sinoui-typography--overline"
    color="warning"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL eIlKBW sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdvvtL kfhcFu sinoui-typography sinoui-typography--overline"
    color="info"
    type="overline"
  >
    Overline
  </p>,
]
`;
